Haiku/bridge/libmojobe/mojobe.h

/*!	`BRect` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BRect` by
	hidden reference. */
struct mojobe_BRect {
	float	left;
	float	top;
	float	right;
	float	bottom;
};
/*!	`BPoint` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BPoint` by
	hidden reference. */
struct mojobe_BPoint {
	float	x;
	float	y;
};
/*!	A Mojo type's hooks for a `BWindow`: a NULL slot is a hook the type
	does not implement. The type tag names the Mojo type. */
struct mojobe_BWindow_hooks {
	uint64	type;
	void	(*destroy)(void* context);
	void	(*MessageReceived)(void* context, BWindow* self, BMessage* message);
	bool	(*QuitRequested)(void* context, BWindow* self);
	void	(*FrameMoved)(void* context,
			BWindow* self,
			mojobe_BPoint newPosition);
	void	(*FrameResized)(void* context,
			BWindow* self,
			float newWidth,
			float newHeight);
	void	(*WindowActivated)(void* context, BWindow* self, bool focus);
	void	(*WorkspaceActivated)(void* context,
			BWindow* self,
			int32 workspace,
			bool state);
	void	(*MenusBeginning)(void* context, BWindow* self);
	void	(*MenusEnded)(void* context, BWindow* self);
	void	(*Zoom)(void* context,
			BWindow* self,
			mojobe_BPoint origin,
			float width,
			float height);
	void	(*Minimize)(void* context, BWindow* self, bool minimize);
};
// void BWindow::Quit()
void mojobe_BWindow_Quit(BWindow* self);
// void BWindow::Show()
void mojobe_BWindow_Show(BWindow* self);
// bool BHandler::IsWatched() const
bool mojobe_BWindow_IsWatched(BWindow* self);
// status_t BArchivable::AllUnarchived(const BMessage* archive)
status_t mojobe_BWindow_AllUnarchived(BWindow* self, BMessage* a_archive);
// status_t BArchivable::AllArchived(BMessage* archive) const
status_t mojobe_BWindow_AllArchived(BWindow* self, BMessage* a_archive);
// BWindow::BWindow(BRect frame, const char* title, window_type type, uint32 flags, uint32 workspace)
BWindow* mojobe_BWindow_new__BRect_charP_window_type_uint32_uint32(mojobe_BRect a_frame,
	const char* a_title,
	window_type a_type,
	uint32 a_flags,
	uint32 a_workspace);
// BWindow::BWindow(BRect frame, const char* title, window_type type, uint32 flags, uint32 workspace), as a MojoBWindow
BWindow* mojobe_MojoBWindow_new__BRect_charP_window_type_uint32_uint32(mojobe_BRect a_frame,
	const char* a_title,
	window_type a_type,
	uint32 a_flags,
	uint32 a_workspace,
	const mojobe_BWindow_hooks* hooks,
	void* context);
// BWindow::BWindow(BRect frame, const char* title, window_look look, window_feel feel, uint32 flags, uint32 workspace)
BWindow* mojobe_BWindow_new__BRect_charP_window_look_window_feel_uint32_uint32(mojobe_BRect a_frame,
	const char* a_title,
	window_look a_look,
	window_feel a_feel,
	uint32 a_flags,
	uint32 a_workspace);
// BWindow::BWindow(BRect frame, const char* title, window_look look, window_feel feel, uint32 flags, uint32 workspace), as a MojoBWindow
BWindow* mojobe_MojoBWindow_new__BRect_charP_window_look_window_feel_uint32_uint32(mojobe_BRect a_frame,
	const char* a_title,
	window_look a_look,
	window_feel a_feel,
	uint32 a_flags,
	uint32 a_workspace,
	const mojobe_BWindow_hooks* hooks,
	void* context);
// deletes a BWindow that was never handed over: locked, then Quit()
void mojobe_BWindow_destroy(BWindow* self);
// BWindow's own MessageReceived
void mojobe_BWindow_base_MessageReceived(BWindow* self, BMessage* message);
// BWindow's own QuitRequested
bool mojobe_BWindow_base_QuitRequested(BWindow* self);
// BWindow's own FrameMoved
void mojobe_BWindow_base_FrameMoved(BWindow* self, mojobe_BPoint newPosition);
// BWindow's own FrameResized
void mojobe_BWindow_base_FrameResized(BWindow* self,
	float newWidth,
	float newHeight);
// BWindow's own WindowActivated
void mojobe_BWindow_base_WindowActivated(BWindow* self, bool focus);
// BWindow's own WorkspaceActivated
void mojobe_BWindow_base_WorkspaceActivated(BWindow* self,
	int32 workspace,
	bool state);
// BWindow's own MenusBeginning
void mojobe_BWindow_base_MenusBeginning(BWindow* self);
// BWindow's own MenusEnded
void mojobe_BWindow_base_MenusEnded(BWindow* self);
// BWindow's own Zoom
void mojobe_BWindow_base_Zoom(BWindow* self,
	mojobe_BPoint origin,
	float width,
	float height);
// BWindow's own Minimize
void mojobe_BWindow_base_Minimize(BWindow* self, bool minimize);
void* mojobe_MojoBWindow_context(BWindow* self, uint64 type);