Haiku/bridge/haiku/_api.mojo


    def IsWatched(self) -> Bool:
        """`bool BHandler::IsWatched() const`."""
        var _result = external_call["mojobe_BWindow_IsWatched", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsWatched"),
        )
        return _result

    def AllUnarchived(self, archive: Some[_AsBMessage]) raises:
        """`status_t BArchivable::AllUnarchived(const BMessage* archive)`."""
        var _result = external_call["mojobe_BWindow_AllUnarchived", Int32](
            _nonnull(self._as_BWindow(), "BWindow::AllUnarchived"),
            _addr(archive._as_BMessage()),
        )
        _check(_result, "BArchivable::AllUnarchived")

    def AllArchived(self, archive: Some[_AsBMessage]) raises:
        """`status_t BArchivable::AllArchived(BMessage* archive) const`."""
        var _result = external_call["mojobe_BWindow_AllArchived", Int32](
            _nonnull(self._as_BWindow(), "BWindow::AllArchived"),
            _addr(archive._as_BMessage()),
        )
        _check(_result, "BArchivable::AllArchived")


struct BWindowRef(
    Boolable,
    ImplicitlyCopyable,
    RegisterPassable,
    _BWindowMethods,
):
    """A `BWindow` the kit owns: valid in a hook, or while its looper is locked. It may be NULL: test it with `if`."""

    var _ptr: _NPtr

    def __init__(out self):
        """A NULL reference."""
        self._ptr = None

    def __init__(out self, ptr: _NPtr):
        self._ptr = ptr

    def __bool__(self) -> Bool:
        return Bool(self._ptr)

    def _as_BWindow(self) -> _NPtr:
        return self._ptr

    def Quit(self):
        """`void BWindow::Quit()`."""
        external_call["mojobe_BWindow_Quit", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Quit"),
        )

    def Show(self):
        """`void BWindow::Show()`."""
        external_call["mojobe_BWindow_Show", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Show"),
        )

    def state[T: Movable & Deinitable](
        self,
    ) raises -> ref[MutUntrackedOrigin] T:
        """The Mojo value the BWindow was made from.

        Raises:
            When it was not made from a `T`.
        """
        return _state_at[T](
            external_call["mojobe_MojoBWindow_context", Int](
                _addr(self._ptr),
                _type_tag[T](),
            ),
            "BWindow",
        )

    def base_MessageReceived(self, message: BMessageRef):
        """`BWindow::MessageReceived`, the class's own."""
        external_call["mojobe_BWindow_base_MessageReceived", NoneType](
            _nonnull(self._ptr, "BWindow::MessageReceived"),
            _addr(message._ptr),
        )

    def base_QuitRequested(self) -> Bool:
        """`BWindow::QuitRequested`, the class's own."""
        return external_call["mojobe_BWindow_base_QuitRequested", Bool](
            _nonnull(self._ptr, "BWindow::QuitRequested"),
        )

    def base_FrameMoved(self, newPosition: BPoint):
        """`BWindow::FrameMoved`, the class's own."""
        external_call["mojobe_BWindow_base_FrameMoved", NoneType](
            _nonnull(self._ptr, "BWindow::FrameMoved"),
            newPosition,
        )

    def base_FrameResized(self, newWidth: Float32, newHeight: Float32):
        """`BWindow::FrameResized`, the class's own."""
        external_call["mojobe_BWindow_base_FrameResized", NoneType](
            _nonnull(self._ptr, "BWindow::FrameResized"),
            newWidth,
            newHeight,
        )

    def base_WindowActivated(self, focus: Bool):
        """`BWindow::WindowActivated`, the class's own."""
        external_call["mojobe_BWindow_base_WindowActivated", NoneType](
            _nonnull(self._ptr, "BWindow::WindowActivated"),
            focus,
        )

    def base_WorkspaceActivated(self, workspace: Int32, state: Bool):
        """`BWindow::WorkspaceActivated`, the class's own."""
        external_call["mojobe_BWindow_base_WorkspaceActivated", NoneType](
            _nonnull(self._ptr, "BWindow::WorkspaceActivated"),
            workspace,
            state,
        )

    def base_MenusBeginning(self):
        """`BWindow::MenusBeginning`, the class's own."""
        external_call["mojobe_BWindow_base_MenusBeginning", NoneType](
            _nonnull(self._ptr, "BWindow::MenusBeginning"),
        )

    def base_MenusEnded(self):
        """`BWindow::MenusEnded`, the class's own."""
        external_call["mojobe_BWindow_base_MenusEnded", NoneType](
            _nonnull(self._ptr, "BWindow::MenusEnded"),
        )

    def base_Zoom(self, origin: BPoint, width: Float32, height: Float32):
        """`BWindow::Zoom`, the class's own."""
        external_call["mojobe_BWindow_base_Zoom", NoneType](
            _nonnull(self._ptr, "BWindow::Zoom"),
            origin,
            width,
            height,
        )

    def base_Minimize(self, minimize: Bool):
        """`BWindow::Minimize`, the class's own."""
        external_call["mojobe_BWindow_base_Minimize", NoneType](
            _nonnull(self._ptr, "BWindow::Minimize"),
            minimize,
        )


struct BWindow(Movable, _BWindowMethods):
    """A `BWindow` Mojo made. It owns itself once handed over (Show, Quit); until then, Mojo deletes it."""

    var _ptr: _NPtr

    def __init__(
        out self,
        frame: BRect,
        var title: String,
        type: window_type,
        flags: UInt32,
        workspace: UInt32 = UInt32(B_CURRENT_WORKSPACE),
    ) raises:
        """`BWindow::BWindow(BRect frame, const char* title, window_type type, uint32 flags, uint32 workspace)`."""
        var address = external_call["mojobe_BWindow_new__BRect_charP_window_type_uint32_uint32", Int](
            frame,
            title.as_c_string_span(),
            type,
            flags,
            workspace,
        )
        _ = title^
        if address == 0:
            raise Error("BWindow could not be made")
        self._ptr = _ptr_from(address)

    def __init__(
        out self,
        frame: BRect,
        var title: String,
        look: window_look,
        feel: window_feel,
        flags: UInt32,
        workspace: UInt32 = UInt32(B_CURRENT_WORKSPACE),
    ) raises:
        """`BWindow::BWindow(BRect frame, const char* title, window_look look, window_feel feel, uint32 flags, uint32 workspace)`."""
        var address = external_call["mojobe_BWindow_new__BRect_charP_window_look_window_feel_uint32_uint32", Int](
            frame,
            title.as_c_string_span(),
            look,
            feel,
            flags,
            workspace,
        )
        _ = title^
        if address == 0:
            raise Error("BWindow could not be made")
        self._ptr = _ptr_from(address)

    def __init__[T: Movable & Deinitable](
        out self,
        frame: BRect,
        var title: String,
        type: window_type,
        flags: UInt32,
        var state: T,
        workspace: UInt32 = UInt32(B_CURRENT_WORKSPACE),
    ) raises:
        """`BWindow::BWindow(BRect frame, const char* title, window_type type, uint32 flags, uint32 workspace)`, its hooks those of `state`."""
        var hooks = _BWindow_hooks[T]()
        var context = _to_heap(state^)
        var address = external_call["mojobe_MojoBWindow_new__BRect_charP_window_type_uint32_uint32", Int](
            frame,
            title.as_c_string_span(),
            type,
            flags,
            workspace,
            Pointer(to=hooks),
            context,
        )
        _ = title^
        if address == 0:
            _destroy[T](context)
            raise Error("BWindow could not be made")
        self._ptr = _ptr_from(address)

    def __init__[T: Movable & Deinitable](
        out self,
        frame: BRect,
        var title: String,
        look: window_look,
        feel: window_feel,
        flags: UInt32,
        var state: T,
        workspace: UInt32 = UInt32(B_CURRENT_WORKSPACE),
    ) raises:
        """`BWindow::BWindow(BRect frame, const char* title, window_look look, window_feel feel, uint32 flags, uint32 workspace)`, its hooks those of `state`."""
        var hooks = _BWindow_hooks[T]()
        var context = _to_heap(state^)
        var address = external_call["mojobe_MojoBWindow_new__BRect_charP_window_look_window_feel_uint32_uint32", Int](
            frame,
            title.as_c_string_span(),
            look,
            feel,
            flags,
            workspace,
            Pointer(to=hooks),
            context,
        )
        _ = title^
        if address == 0:
            _destroy[T](context)
            raise Error("BWindow could not be made")
        self._ptr = _ptr_from(address)

    def __deinit__(deinit self):
        external_call["mojobe_BWindow_destroy", NoneType](_addr(self._ptr))

    def _adopt(deinit self) -> Int:
        """Hands the object over without deleting it."""
        return _addr(self._ptr)

    def _as_BWindow(self) -> _NPtr:
        return self._ptr

    def Quit(deinit self):
        """`void BWindow::Quit()`."""
        external_call["mojobe_BWindow_Quit", NoneType](
            _nonnull(self._ptr, "BWindow::Quit"),
        )

    def Show(deinit self):
        """`void BWindow::Show()`."""
        external_call["mojobe_BWindow_Show", NoneType](
            _nonnull(self._ptr, "BWindow::Show"),
        )


trait WindowMessageReceived:
    """`void BWindow::MessageReceived(BMessage* message)`: a hook of BWindow."""

    def MessageReceived(mut self, window: BWindowRef, message: BMessageRef):
        ...


trait WindowQuitRequested:
    """`bool BWindow::QuitRequested()`: a hook of BWindow."""

    def QuitRequested(mut self, window: BWindowRef) -> Bool:
        ...


trait WindowFrameMoved:
    """`void BWindow::FrameMoved(BPoint newPosition)`: a hook of BWindow."""

    def FrameMoved(mut self, window: BWindowRef, newPosition: BPoint):
        ...


trait WindowFrameResized:
    """`void BWindow::FrameResized(float newWidth, float newHeight)`: a hook of BWindow."""

    def FrameResized(
        mut self,
        window: BWindowRef,
        newWidth: Float32,
        newHeight: Float32,
    ):
        ...


trait WindowWindowActivated:
    """`void BWindow::WindowActivated(bool focus)`: a hook of BWindow."""

    def WindowActivated(mut self, window: BWindowRef, focus: Bool):
        ...


trait WindowWorkspaceActivated:
    """`void BWindow::WorkspaceActivated(int32 workspace, bool state)`: a hook of BWindow."""

    def WorkspaceActivated(
        mut self,
        window: BWindowRef,
        workspace: Int32,
        state: Bool,
    ):
        ...


trait WindowMenusBeginning:
    """`void BWindow::MenusBeginning()`: a hook of BWindow."""

    def MenusBeginning(mut self, window: BWindowRef):
        ...


trait WindowMenusEnded:
    """`void BWindow::MenusEnded()`: a hook of BWindow."""

    def MenusEnded(mut self, window: BWindowRef):
        ...


trait WindowZoom:
    """`void BWindow::Zoom(BPoint origin, float width, float height)`: a hook of BWindow."""

    def Zoom(
        mut self,
        window: BWindowRef,
        origin: BPoint,
        width: Float32,
        height: Float32,
    ):
        ...


trait WindowMinimize:
    """`void BWindow::Minimize(bool minimize)`: a hook of BWindow."""

    def Minimize(mut self, window: BWindowRef, minimize: Bool):
        ...


struct _BWindowHooks(ImplicitlyCopyable, RegisterPassable):
    """`mojobe_BWindow_hooks`, laid out as C's."""

    var type: UInt64
    var destroy: _FnPtr
    var MessageReceived: _FnPtr
    var QuitRequested: _FnPtr
    var FrameMoved: _FnPtr
    var FrameResized: _FnPtr
    var WindowActivated: _FnPtr
    var WorkspaceActivated: _FnPtr
    var MenusBeginning: _FnPtr
    var MenusEnded: _FnPtr
    var Zoom: _FnPtr
    var Minimize: _FnPtr
